// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datepicker /w complete 1`] = `
.c6 {
  font-size: 14px;
  line-height: 22px;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
  top: 12px;
  line-height: normal;
  overflow: hidden;
}

.c4 {
  position: relative;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: normal;
}

.c7 {
  position: relative;
  padding: 0;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  background-color: transparent;
  color: #2B2D33;
  border: none;
  outline: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  font-size: 14px;
  line-height: 22px;
}

.c7::-webkit-input-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7::-moz-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7:-ms-input-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7::placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7::-ms-clear,
.c7::-ms-reveal {
  display: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c3 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c3 > *,
.c3 input {
  color: #2B2D33;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 40px;
  border: 1px solid #D5D5D6;
}

.c2:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c5 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: none;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              11.12.1900
            </div>
          </div>
          <input
            aria-invalid="false"
            class="c7"
            value="11.12.1900"
          />
        </div>
      </div>
      <div
        class="c8"
      >
        <svg
          cursor="pointer"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`Datepicker /w date not in range 1`] = `
.c6 {
  font-size: 14px;
  line-height: 22px;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
  top: 12px;
  line-height: normal;
  overflow: hidden;
}

.c4 {
  position: relative;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: normal;
}

.c8 {
  position: relative;
  padding: 0;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  background-color: transparent;
  color: #2B2D33;
  border: none;
  outline: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  font-size: 14px;
  line-height: 22px;
}

.c8::-webkit-input-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c8::-moz-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c8:-ms-input-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c8::placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c8::-ms-clear,
.c8::-ms-reveal {
  display: none;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c3 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c3 > *,
.c3 input {
  color: #2B2D33;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 40px;
  border: 1px solid #D5D5D6;
}

.c2:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c5 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  color: transparent;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: none;
}

.c1 {
  position: relative;
}

<Datepicker
  isCalendarOpen={false}
  maxDate={2020-06-14T21:00:00.000Z}
  minDate={2020-06-01T21:00:00.000Z}
  todayButton={true}
  value={2020-06-16T21:00:00.000Z}
>
  <Datepickerstyles__Box
    onBlur={[Function]}
  >
    <div
      className="c0"
      onBlur={[Function]}
    >
      <Datepickerstyles__InputBox
        onClick={[Function]}
      >
        <div
          className="c1"
          onClick={[Function]}
        >
          <InputDate
            active={false}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            postfix={
              <Calendar
                color="currentColor"
                cursor="pointer"
                onClick={[Function]}
                size="m"
              />
            }
            value={2020-06-16T21:00:00.000Z}
          >
            <InputMask
              active={false}
              blocks={
                Object {
                  "DATE": Object {
                    "mask": [Function],
                    "max": 9998-12-31T21:00:00.000Z,
                    "min": 1899-12-31T21:29:43.000Z,
                  },
                }
              }
              design="outline"
              format={[Function]}
              lazy={true}
              mask="DATE"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              parse={[Function]}
              postfix={
                <Calendar
                  color="currentColor"
                  cursor="pointer"
                  onClick={[Function]}
                  size="m"
                />
              }
              size="l"
              smartPlaceholder="17.06.2020"
              value="17.06.2020"
            >
              <Input
                active={false}
                design="outline"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onUpdated={[Function]}
                postfix={
                  <Calendar
                    color="currentColor"
                    cursor="pointer"
                    onClick={[Function]}
                    size="m"
                  />
                }
                size="l"
                smartPlaceholder="17.06.2020"
                value="17.06.2020"
              >
                <InputWrapper
                  active={false}
                  design="outline"
                  size="l"
                >
                  <Inputstyles__Wrapper
                    active={false}
                    design="outline"
                    size="l"
                  >
                    <label
                      className="c2"
                      size="l"
                    >
                      <Inputstyles__Wrapped>
                        <div
                          className="c3"
                        >
                          <NativeInput
                            active={false}
                            aria-invalid={false}
                            design="outline"
                            key=".1"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyPress={[Function]}
                            onUpdated={[Function]}
                            size="l"
                            smartPlaceholder="17.06.2020"
                            value="17.06.2020"
                          >
                            <Inputstyles__Box>
                              <div
                                className="c4"
                              >
                                <Inputstyles__PlaceholderWrapper>
                                  <div
                                    className="c5"
                                  >
                                    <Inputstyles__Placeholder
                                      design="outline"
                                      size="l"
                                    >
                                      <div
                                        className="c6"
                                        size="l"
                                      >
                                        <Inputstyles__Invisible>
                                          <span
                                            className="c7"
                                          >
                                            17.06.2020
                                          </span>
                                        </Inputstyles__Invisible>
                                        <span />
                                      </div>
                                    </Inputstyles__Placeholder>
                                  </div>
                                </Inputstyles__PlaceholderWrapper>
                                <Inputstyles__StyledInput
                                  active={false}
                                  aria-invalid={false}
                                  design="outline"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  onKeyPress={[Function]}
                                  onScroll={[Function]}
                                  size="l"
                                  value="17.06.2020"
                                >
                                  <input
                                    aria-invalid={false}
                                    className="c8"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    onKeyPress={[Function]}
                                    onScroll={[Function]}
                                    size="l"
                                    value="17.06.2020"
                                  />
                                </Inputstyles__StyledInput>
                              </div>
                            </Inputstyles__Box>
                          </NativeInput>
                        </div>
                      </Inputstyles__Wrapped>
                      <Inputstyles__Postfix
                        active={false}
                        size="l"
                      >
                        <div
                          className="c9"
                          size="l"
                        >
                          <Calendar
                            color="currentColor"
                            cursor="pointer"
                            key=".2"
                            onClick={[Function]}
                            size="m"
                          >
                            <svg
                              cursor="pointer"
                              fill="currentColor"
                              height={20}
                              onClick={[Function]}
                              viewBox="0 0 24 24"
                              width={20}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <defs />
                              <path
                                d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
                              />
                            </svg>
                          </Calendar>
                        </div>
                      </Inputstyles__Postfix>
                    </label>
                  </Inputstyles__Wrapper>
                </InputWrapper>
              </Input>
            </InputMask>
          </InputDate>
        </div>
      </Datepickerstyles__InputBox>
    </div>
  </Datepickerstyles__Box>
</Datepicker>
`;

exports[`Datepicker /w date not in range and not fix value 1`] = `
.c6 {
  font-size: 14px;
  line-height: 22px;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
  top: 12px;
  line-height: normal;
  overflow: hidden;
}

.c4 {
  position: relative;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: normal;
}

.c8 {
  position: relative;
  padding: 0;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  background-color: transparent;
  color: #2B2D33;
  border: none;
  outline: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  font-size: 14px;
  line-height: 22px;
}

.c8::-webkit-input-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c8::-moz-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c8:-ms-input-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c8::placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c8::-ms-clear,
.c8::-ms-reveal {
  display: none;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c3 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c3 > *,
.c3 input {
  color: #2B2D33;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 40px;
  border: 1px solid #D5D5D6;
}

.c2:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c5 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  color: transparent;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: none;
}

.c1 {
  position: relative;
}

<Datepicker
  isCalendarOpen={false}
  maxDate={2020-06-14T21:00:00.000Z}
  minDate={2020-06-01T21:00:00.000Z}
  todayButton={true}
  value={2020-06-16T21:00:00.000Z}
>
  <Datepickerstyles__Box
    onBlur={[Function]}
  >
    <div
      className="c0"
      onBlur={[Function]}
    >
      <Datepickerstyles__InputBox
        onClick={[Function]}
      >
        <div
          className="c1"
          onClick={[Function]}
        >
          <InputDate
            active={false}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            postfix={
              <Calendar
                color="currentColor"
                cursor="pointer"
                onClick={[Function]}
                size="m"
              />
            }
            value={2020-06-16T21:00:00.000Z}
          >
            <InputMask
              active={false}
              blocks={
                Object {
                  "DATE": Object {
                    "mask": [Function],
                    "max": 9998-12-31T21:00:00.000Z,
                    "min": 1899-12-31T21:29:43.000Z,
                  },
                }
              }
              design="outline"
              format={[Function]}
              lazy={true}
              mask="DATE"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              parse={[Function]}
              postfix={
                <Calendar
                  color="currentColor"
                  cursor="pointer"
                  onClick={[Function]}
                  size="m"
                />
              }
              size="l"
              smartPlaceholder="17.06.2020"
              value="17.06.2020"
            >
              <Input
                active={false}
                design="outline"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onUpdated={[Function]}
                postfix={
                  <Calendar
                    color="currentColor"
                    cursor="pointer"
                    onClick={[Function]}
                    size="m"
                  />
                }
                size="l"
                smartPlaceholder="17.06.2020"
                value="17.06.2020"
              >
                <InputWrapper
                  active={false}
                  design="outline"
                  size="l"
                >
                  <Inputstyles__Wrapper
                    active={false}
                    design="outline"
                    size="l"
                  >
                    <label
                      className="c2"
                      size="l"
                    >
                      <Inputstyles__Wrapped>
                        <div
                          className="c3"
                        >
                          <NativeInput
                            active={false}
                            aria-invalid={false}
                            design="outline"
                            key=".1"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyPress={[Function]}
                            onUpdated={[Function]}
                            size="l"
                            smartPlaceholder="17.06.2020"
                            value="17.06.2020"
                          >
                            <Inputstyles__Box>
                              <div
                                className="c4"
                              >
                                <Inputstyles__PlaceholderWrapper>
                                  <div
                                    className="c5"
                                  >
                                    <Inputstyles__Placeholder
                                      design="outline"
                                      size="l"
                                    >
                                      <div
                                        className="c6"
                                        size="l"
                                      >
                                        <Inputstyles__Invisible>
                                          <span
                                            className="c7"
                                          >
                                            17.06.2020
                                          </span>
                                        </Inputstyles__Invisible>
                                        <span />
                                      </div>
                                    </Inputstyles__Placeholder>
                                  </div>
                                </Inputstyles__PlaceholderWrapper>
                                <Inputstyles__StyledInput
                                  active={false}
                                  aria-invalid={false}
                                  design="outline"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  onKeyPress={[Function]}
                                  onScroll={[Function]}
                                  size="l"
                                  value="17.06.2020"
                                >
                                  <input
                                    aria-invalid={false}
                                    className="c8"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    onKeyPress={[Function]}
                                    onScroll={[Function]}
                                    size="l"
                                    value="17.06.2020"
                                  />
                                </Inputstyles__StyledInput>
                              </div>
                            </Inputstyles__Box>
                          </NativeInput>
                        </div>
                      </Inputstyles__Wrapped>
                      <Inputstyles__Postfix
                        active={false}
                        size="l"
                      >
                        <div
                          className="c9"
                          size="l"
                        >
                          <Calendar
                            color="currentColor"
                            cursor="pointer"
                            key=".2"
                            onClick={[Function]}
                            size="m"
                          >
                            <svg
                              cursor="pointer"
                              fill="currentColor"
                              height={20}
                              onClick={[Function]}
                              viewBox="0 0 24 24"
                              width={20}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <defs />
                              <path
                                d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
                              />
                            </svg>
                          </Calendar>
                        </div>
                      </Inputstyles__Postfix>
                    </label>
                  </Inputstyles__Wrapper>
                </InputWrapper>
              </Input>
            </InputMask>
          </InputDate>
        </div>
      </Datepickerstyles__InputBox>
    </div>
  </Datepickerstyles__Box>
</Datepicker>
`;

exports[`Datepicker /w invalid 1`] = `
.c6 {
  font-size: 14px;
  line-height: 22px;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
  top: 12px;
  line-height: normal;
  overflow: hidden;
}

.c4 {
  position: relative;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: normal;
}

.c7 {
  position: relative;
  padding: 0;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  background-color: transparent;
  color: #2B2D33;
  border: none;
  outline: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  font-size: 14px;
  line-height: 22px;
}

.c7::-webkit-input-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7::-moz-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7:-ms-input-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7::placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7::-ms-clear,
.c7::-ms-reveal {
  display: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c3 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c3 > *,
.c3 input {
  color: #2B2D33;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 40px;
  border: 1px solid #D5D5D6;
  border-color: #EE505A;
}

.c2:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c5 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: none;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              ДД.ММ.ГГГГ
            </div>
          </div>
          <input
            aria-invalid="true"
            class="c7"
            value=""
          />
        </div>
      </div>
      <div
        class="c8"
      >
        <svg
          cursor="pointer"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`Datepicker /w not complete 1`] = `
.c6 {
  font-size: 14px;
  line-height: 22px;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
  top: 12px;
  line-height: normal;
  overflow: hidden;
}

.c4 {
  position: relative;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: normal;
}

.c7 {
  position: relative;
  padding: 0;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  background-color: transparent;
  color: #2B2D33;
  border: none;
  outline: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  font-size: 14px;
  line-height: 22px;
}

.c7::-webkit-input-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7::-moz-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7:-ms-input-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7::placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7::-ms-clear,
.c7::-ms-reveal {
  display: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c3 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c3 > *,
.c3 input {
  color: #2B2D33;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 40px;
  border: 1px solid #D5D5D6;
}

.c2:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c5 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: none;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              22.02.ГГГГ
            </div>
          </div>
          <input
            aria-invalid="false"
            class="c7"
            value="22.02"
          />
        </div>
      </div>
      <div
        class="c8"
      >
        <svg
          cursor="pointer"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`Datepicker 1`] = `
.c6 {
  font-size: 14px;
  line-height: 22px;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
  top: 12px;
  line-height: normal;
  overflow: hidden;
}

.c4 {
  position: relative;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: normal;
}

.c7 {
  position: relative;
  padding: 0;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  background-color: transparent;
  color: #2B2D33;
  border: none;
  outline: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  font-size: 14px;
  line-height: 22px;
}

.c7::-webkit-input-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7::-moz-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7:-ms-input-placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7::placeholder {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  width: 100%;
  color: #AAABAD;
  line-height: auto;
}

.c7::-ms-clear,
.c7::-ms-reveal {
  display: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c3 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c3 > *,
.c3 input {
  color: #2B2D33;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 40px;
  border: 1px solid #D5D5D6;
}

.c2:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c5 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: none;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              ДД.ММ.ГГГГ
            </div>
          </div>
          <input
            aria-invalid="false"
            class="c7"
            value=""
          />
        </div>
      </div>
      <div
        class="c8"
      >
        <svg
          cursor="pointer"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;
